# ai-app-lab

./: .licenserc.yaml  README.md  commitlint.config.ts  package.json  pyproject.toml  test_anomalib.ipynb
.github/workflows/: ci.yaml  license_check.yaml
arkitect/: README.md  README_en.md
arkitect/core/client/: redis.py
arkitect/core/memory/: base_memory_service.py  in_memory_memory_service.py  mem0_memory_service.py  utils.py
arkitect/core/runtime/: __init__.py
arkitect/launcher/local/: serve.py
arkitect/telemetry/trace/: setup.py
arkitect/tests/ut/: test_bot_wrapper.py
arkitect/types/llm/: model.py
arkitect/types/responses/: event.py  utils.py
cookbook/quick-start/: agent.py  agent_server.py
demohouse/chat2cartoon/: .env
demohouse/chat2cartoon/backend/: index.py
demohouse/chat2cartoon_en/: README.md
demohouse/chat2cartoon_en/frontend/: modern.config.ts
demohouse/computer_use/: README.md
demohouse/computer_use/ecs_manager/: README.md  config.toml
demohouse/computer_use/frontend/: .env.example  dockerfile  package.json
demohouse/computer_use/mcp_server/: README.md  settings.toml
demohouse/computer_use/planner/: README.md  config.toml
demohouse/computer_use/tool_server/: README.md  main.py
demohouse/computer_use/tool_server_client/: README.md  pyproject.toml
demohouse/computer_use/tool_server_client/src/tool_server_client/: __about__.py  client.py  examples.py  main.py  models.py
demohouse/conversational_ai_embedded/: README.md
demohouse/deep_research/: README.md  config.py  deep_research.py  prompt.py  pyproject.toml  requirements.txt  run_local.py  server.py  utils.py  webui.py
demohouse/deep_research_agent/backend/: arkitect-0.2.0-py3-none-any.whl  mcp_config.json  mcp_servers_config.json  pyproject.toml  requirements.txt  run.py  run.sh  test.py
demohouse/deep_research_agent/backend/agent/: agent.py  planner.py  summary.py  supervisor.py  worker.py
demohouse/deep_research_agent/backend/config/: config.py
demohouse/deep_research_agent/backend/deep_research/: deep_research.py
demohouse/deep_research_agent/backend/memory/: memory.py
demohouse/deep_research_agent/backend/models/: events.py  messages.py  planning.py  request.py  server.py  tool_events.py  usage.py
demohouse/deep_research_agent/backend/planning/: planner.py  planning.py
demohouse/deep_research_agent/backend/prompt/: planning.py  summary.py  supervisor.py  worker.py
demohouse/deep_research_agent/backend/server/: bot_server.py  response.py  response_server.py  server.py
demohouse/deep_research_agent/backend/service/: multi_agent.py
demohouse/deep_research_agent/backend/state/: deep_research_state.py  file_state_manager.py  global_state.py
demohouse/deep_research_agent/backend/supervisor/: default.py  supervisor.py
demohouse/deep_research_agent/backend/supervisord.d/: link-search-mcp.conf  tls-mcp.conf  vdb-mcp.conf
demohouse/deep_research_agent/backend/tools/: hooks.py  mock.py  sandbox.py
demohouse/deep_research_agent/backend/utils/: common.py  context.py  converter.py  message.py  planning_holder.py
demohouse/deep_search/: README.md  deep_search.py  index.py  prompt.py  pyproject.toml  utils.py
demohouse/deep_search/search_engine/: search_engine.py  tavily.py
demohouse/deep_search_en/: deep_search.py
demohouse/deep_search_mcp/backend/: README.md  requirements.txt
demohouse/deep_search_mcp/frontend/: modern.config.ts  tailwind.config.js  tsconfig.json
demohouse/deepdoubao/: README.md
demohouse/deepdoubao/backend/: pyproject.toml
demohouse/game_agent/: README.md
demohouse/hgdoll/: LICENSE  README.md
demohouse/hgdoll/android/: .gitignore  README.md  local.properties
demohouse/hgdoll/docs/: README_en.md  key.md
demohouse/hgdoll/server/: README.md  requestmen.txt  run.sh
demohouse/human_in_the_loop/: human_in_the_loop.py
demohouse/live_voice_call/backend/: event.py  handler.py  service.py
demohouse/mobile-use/web/: package-lock.json  package.json
demohouse/multimedia/: README.md
demohouse/pocket_pal/: README.md
demohouse/shopping/: pyproject.toml
demohouse/shopping/backend/code/: main.py  utils.py  vdb.py
demohouse/storybook-agent/: .env.example  .gitignore  README.md  ark_client.py  const.py  generation.py  main.py  requirements.txt  story.py
demohouse/storybook-agent/frontend/: README.md  modern.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
demohouse/teacher-demo/: applet.config.ts
demohouse/video_analyser/: README.md
demohouse/video_gen_demo/: README.md
examples/human_in_the_loop/: human_in_the_loop.py
examples/memory_service/agent_with_memory/: housing_agent_frontend.py  main.py  tools.py
examples/memory_service/client/: housing_agent_client.py
examples/quick_start/: arkitect_cookbook.ipynb  cookbook_for_agent.py
mcp/server/mcp_server_speech/: README.md  pyproject.toml
mcp/server/mcp_server_speech/src/mcp_server_speech/: __main__.py  config.py  main.py  models.py  server.py
mcp/server/mcp_server_speech/src/mcp_server_speech/services/: asr.py  asr_ws.py  tts.py
(+451 files in other folders)
