[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-server-client"
dynamic = ["version"]
description = 'This is the Python SDK for Computer Use Tool Server, allowing you to easily control the computer desktop environment from your applications.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "lvlv", email = "lvgj1998@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "requests>=2.25.0",
    "pydantic>=1.8.0",
]

[project.urls]
Documentation = "https://github.com/lvlv/tool-server-client#readme"
Issues = "https://github.com/lvlv/tool-server-client/issues"
Source = "https://github.com/lvlv/tool-server-client"

[tool.hatch.version]
path = "src/tool_server_client/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tool_server_client tests}"

[tool.coverage.run]
source_pkgs = ["tool_server_client", "tests"]
branch = true
parallel = true
omit = [
  "src/tool_server_client/__about__.py",
]

[tool.coverage.paths]
tool_server_client = ["src/tool_server_client", "*/tool-server-client/src/tool_server_client"]
tests = ["tests", "*/tool-server-client/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
