[tool.poetry]
name = "deep-research"
version = "0.1.0"
description = "deep research using agent system"
authors = ["liuminghao <liuminghao.lm@bytedance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
arkitect = { path="../../../../ai-app-lab",  develop=true }
mcp = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
